perf: 代码生成表选项额外包装